--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -62,6 +62,29 @@
           margin: 0;
         }
       }
+
+      .icons {
+        font-size: 1.5rem;
+        display: inline;
+        padding: 0;
+        margin: 0;
+
+        a {
+          color: black;
+          outline: none;
+          text-decoration: none;
+          margin: 0.5rem;
+          @include transition-ease;
+
+          &:hover {
+            color: $primary-color;
+          }
+        }
+      }
+
+      .copyright {
+        font-size: 0.75rem;
+      }
     }
   }
 }
